solve extra width bug on mobile screen

--- a/src/components/SingleMessage/SingleMessage.css
+++ b/src/components/SingleMessage/SingleMessage.css
@@ -37,3 +37,20 @@
   background: #2a2a2a;
   color: white;
 }
+@media only screen and (max-width: 500px) {
+  .chat-left {
+  /*justify-content: flex-start;*/
+  max-width: 73vw;
+  border-radius: 24px;
+  padding: 20px;
+  background: #474747;
+  color : white;
+}
+.chat-right {
+  max-width: 73vw;
+  border-radius: 24px;
+  padding: 20px;
+  background: #2a2a2a;
+  color: white;
+}
+}
